Builds out new buildkit workerpool implementation (#30)
* builds out new worker pool implementation

a number of separate concerns have been broken out into separate types
that focus on a single aspect of "scaling workers"

* adds poolWatchTimeout to helm chart

exposes this buildkit workerpool configuration externally

* breaks up controller.Start into smaller funcs

this func has already grown into a big one so this improves readability

* fixes lease manager expiry time check

and worker pool logger names

* starts with info level in scaler

i want all the info so we can reduce this and other logs to a DEBUG
level if/when desired

* adds back buildTime to status

this value shows up in the printer columns and we lost it when we moved
from an update to a patch

* plugs new buildkit workerpool into controller start

using interface from new pkg

* fixes terminateUnleasedPods log messages

need to use local log obj with pod name inside loop

* updates leasemanager bits

- fixes logging mistake
- ensures reverse sort of buildkit pods when scaling down
- extracts buildkit pod hostname scan into separate func

* modifies crd to use local pkg/kubernetes for rest config

* fixes ordinal sorting of buildkit pods

* condenses workerPool logic

removes the leasemanager since we really want to queue the handling of
requests and pod leases. hence, the workerPool now has all the logic for
managing leases.

the requestqueue was also reworked to focus on leased pods rather than
endpoint addresses.

* fixes processRequests shutdown logic

and adds pod name to debug logs with out-of-band leasing routine

* fixes image build time and status update

* update worker pool implementation to use a single update loop for distributing requests (#33)

* update worker pool to a single reconcile loop for distributing requests

* update helm chart docs for poolSyncWaitTime

* update workflow to run on all PRs

* update for li
